<resources>
    <string name="app_name">Smart Order</string>
    <string name="action_settings">Settings</string>
    <string name="information">個人資訊</string>
    <string name="orderlist">點餐紀錄</string>
    <string name="Collectionoffer">收藏優惠</string>
    <string name="membertitle">會員</string>
    <string name="accountnumber">帳號(手機號碼)：</string>
    <string name="memberpassword">密碼：</string>
    <string name="showinformation">會員基本資料</string>
    <string name="showorder">詳細訂單</string>
    <string name="orderlistid">編號</string>
    <string name="orderlistdste">日期</string>
    <string name="orderitem">品項</string>
    <string name="ordertotal">total:</string>
    <string name="textNoCameraAppsFound">請同意開啟相機</string>
    <string name="memberbir">生日：</string>
    <string name="membersex">性別：</string>
    <string name="accountname">姓名：</string>
    <string name="memberrepassword">請再次輸入密碼：</string>
    <string name="facebook_app_id">2345556035457734</string>
    <string name="msg_InsertFail">Insert fail</string>
    <string name="msg_InsertSuccess">Insert successfully</string>
    <string name="msg_NoNetwork">no network connection available</string>
    <string name="msg_NoSpotsFound">No spots found</string>
    <string name="msg_NoNewsFound">No news found</string>







</resources>
