<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/yy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserActivity"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".UserActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/showorder"
                android:textColor="@color/colorwhite"
                android:textSize="20dp" />

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/orderlistdste"
                    android:textColor="@color/colorwhite"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:text="顯示日期"
                    android:textColor="@color/colorwhite"
                    android:textSize="16dp" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/orderitem"
                    android:textColor="@color/colorwhite"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:text="顯示品項"
                    android:textColor="@color/colorwhite"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:text="$20"
                    android:textColor="@color/colorwhite"
                    android:textSize="16dp" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/ordertotal"
                    android:textColor="@color/colorwhite"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:text="$39999"
                    android:textColor="@color/colorwhite"
                    android:textSize="10dp" />
            </TableRow>

        </TableLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>