<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserActivity"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:layout_centerHorizontal="true">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/photo"
        android:background="@color/colorgray"
        android:layout_marginTop="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="5dp"
        />




    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".UserActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/showinformation"
                android:textSize="20dp" />

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/accountnumber"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:inputType="phone"
                    android:hint="顯示帳號"
                    android:textSize="16dp" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/memberpassword"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:inputType="textPassword"
                    android:hint="顯示密碼"
                    android:textSize="16dp" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/memberbir"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:inputType="date"
                    android:hint="顯示生日"
                    android:textSize="16dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/membersex"
                    android:textSize="16dp" />

                <RadioGroup
                    android:id="@+id/Sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="男" />

                    <RadioButton
                        android:id="@+id/Female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="女" />

                </RadioGroup>
            </TableRow>

        </TableLayout>


    </android.support.v7.widget.CardView>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btOK"
        android:gravity="center"
        android:layout_marginStart="120dp"
        android:text="ok"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btClean"
        android:gravity="center"
        android:text="Clean"/>
</LinearLayout>


</LinearLayout>